tests/models/snapshots/breeds/can_delete_by_id@breeds.snap
---
source: tests/models/breeds.rs
assertion_line: 130
expression: result
---
Ok(
    PgQueryResult {
        rows_affected: 1,
    },
)
