tests/models/snapshots/breeds/can_find_all_no_query@breeds.snap
---
source: tests/models/breeds.rs
assertion_line: 58
expression: result
---
Ok(
    [
        Breed {
            id: ID,
            specie_id: ID,
            name: "Aberdeen Angus",
            description: Some(
                "Beef cattle with red or black coat",
            ),
            typical_male_weight_range: Some(
                "750-950",
            ),
            typical_female_weight_range: Some(
                "500-550",
            ),
            typical_gestation_period: Some(
                "283 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Beef Shorthorn",
            description: Some(
                "Red, white or roan coloured beef cattle",
            ),
            typical_male_weight_range: Some(
                "1100-1300",
            ),
            typical_female_weight_range: Some(
                "600-800",
            ),
            typical_gestation_period: Some(
                "284 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Dorper",
            description: Some(
                "Mutton sheep with black head and white coat",
            ),
            typical_male_weight_range: Some(
                "50-80",
            ),
            typical_female_weight_range: Some(
                "90-140",
            ),
            typical_gestation_period: Some(
                "147 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Dorset Horn",
            description: Some(
                "White mutton sheep from England",
            ),
            typical_male_weight_range: Some(
                "60-75",
            ),
            typical_female_weight_range: Some(
                "90-120",
            ),
            typical_gestation_period: Some(
                "145 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Friesian-Holstein",
            description: Some(
                "Black and white dairy cattle",
            ),
            typical_male_weight_range: Some(
                "1150-1200",
            ),
            typical_female_weight_range: Some(
                "650-750",
            ),
            typical_gestation_period: Some(
                "279 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Hereford",
            description: Some(
                "Beef cattle spotting a red coat with a white head and socks",
            ),
            typical_male_weight_range: Some(
                "1000-1045",
            ),
            typical_female_weight_range: Some(
                "545-680",
            ),
            typical_gestation_period: Some(
                "285 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Jersey",
            description: Some(
                "Small sized dairy cattle breed",
            ),
            typical_male_weight_range: Some(
                "550-700",
            ),
            typical_female_weight_range: Some(
                "350-475",
            ),
            typical_gestation_period: Some(
                "270 days",
            ),
            created_at: DATE,
            organisation_pid: Some(
                PID,
            ),
            is_system_defined: false,
        },
        Breed {
            id: ID,
            specie_id: ID,
            name: "Merino",
            description: Some(
                "Wool sheep",
            ),
            typical_male_weight_range: Some(
                "30-60",
            ),
            typical_female_weight_range: Some(
                "70-80",
            ),
            typical_gestation_period: Some(
                "144 days",
            ),
            created_at: DATE,
            organisation_pid: None,
            is_system_defined: true,
        },
    ],
)
